<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/surgeon"
        android:title="@string/tv_surgeons"
        android:icon="@drawable/ic_surgeon_svg"/>
    <item
        android:id="@+id/procedure"
        android:title="@string/tv_procedures"
        android:icon="@drawable/ic_procedures"/>
    <item
        android:id="@+id/journal"
        android:title="@string/tv_journal"
        android:icon="@drawable/ic_journal"/>
    <item
        android:id="@+id/notification"
        android:title="@string/tv_notifications"
        android:icon="@drawable/ic_notifications"/>
    <item
        android:id="@+id/account"
        android:title="@string/tv_account"
        android:icon="@drawable/ic_settings" />
</menu>