<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvForgotPasswordDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_forgot_password_description"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/tv_username_or_password"
        app:hintTextColor="@color/colorGreen"
        app:boxStrokeColor="@color/colorGreen"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDesc">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_send"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:layout_constraintEnd_toEndOf="@id/tilUsername"
        app:layout_constraintStart_toStartOf="@id/tilUsername"/>

</androidx.constraintlayout.widget.ConstraintLayout>