<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorGreen"
            app:popupTheme="@style/AppTheme.PopUpOverlay">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"
                    tools:text="Add Surgeon"/>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivSurgeonPhoto"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="16dp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:padding="7dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_firstname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivSurgeonPhoto"
                app:layout_constraintStart_toEndOf="@id/ivSurgeonPhoto" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_lastname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFirstName"
                app:layout_constraintStart_toEndOf="@id/ivSurgeonPhoto"
                app:layout_constraintBottom_toBottomOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etOrganization"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_organization"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivSurgeonPhoto"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etSpecialization"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_specialization"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etOrganization"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <TextView
                android:id="@+id/tvContactPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_contact_person"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etSpecialization"
                app:layout_constraintStart_toStartOf="@+id/etSpecialization" />

            <EditText
                android:id="@+id/etContactPerson"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_contact_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContactPerson"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <TextView
                android:id="@+id/tvContactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_contact_numbers"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etContactPerson"
                app:layout_constraintStart_toStartOf="@+id/etContactPerson" />

            <EditText
                android:id="@+id/etWork"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_work"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContactNumber"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_mobile_number"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etWork"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etLandline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:inputType="number"
                android:hint="@string/tv_hint_landline_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etMobile"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etFax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_fax"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLandline"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_email"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etFax"
                app:layout_constraintStart_toStartOf="@+id/etContactPerson" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <TextView
                android:id="@+id/tvWebsiteUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_website"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etContactPerson" />

            <EditText
                android:id="@+id/etWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWebsiteUrl"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <TextView
                android:id="@+id/tvMailingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_mailing_address"
                android:textColor="@color/colorGreen"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/etWebsite"
                app:layout_constraintStart_toStartOf="@+id/etContactPerson" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMailingAddress"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etStreet"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCity"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_hint_zip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etState"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"/>

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:padding="7dp"
                android:maxLines="10"
                android:gravity="top|left"
                android:scrollbars="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_edittext"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tv_notes"
                android:layout_marginBottom="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etZip"
                app:layout_constraintStart_toStartOf="@id/ivSurgeonPhoto"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>