<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_rect_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            android:textSize="40sp"
            android:textColor="@color/colorGreen"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tvDaysTrial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_30_days_trial"
            android:textColor="@color/colorGreen"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/tvAppName"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/tv_app_description"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDaysTrial"
            app:layout_constraintStart_toStartOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAllCaps="false"
        android:text="@string/tv_register_free_trial"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        app:iconGravity="end"
        app:icon="@drawable/ic_arrow_right"
        app:cornerRadius="5dp"
        app:backgroundTint="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@id/containerTop"
        app:layout_constraintEnd_toEndOf="@id/containerTop"
        app:layout_constraintStart_toStartOf="@id/containerTop"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/tv_already_have_account"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        app:backgroundTint="@color/colorOrange"
        app:iconGravity="end"
        app:icon="@drawable/ic_arrow_right"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="@id/btnRegister"/>
</androidx.constraintlayout.widget.ConstraintLayout>